@@ -1,3 +1,10 @@
+Sat Jul 29 11:59:29 2000  Christopher Faylor <cgf@cygnus.com>
+
+	* environ.cc (parse_thing): Make binmode a DWORD.
+	* hinfo.cc (hinfo::init_std_file_from_handle): Use 'binmode' to
+	determine default open mode.
+	* winsup.h: Declare binmode.
+
 Thu Jul 27 22:54:28 2000  Jason Tishler <jt@dothill.com>
 
 	* dcrt0.cc (dummy_autoload): Add load statement for RegDeleteValueA.
